# BancoFutura

./: .env.example  .gitignore  README.md  audit_queries.surql  docker-compose.yml  history.txt  plan_implementacion_voxbank.md  schema.surql
banco-futura-app/: .env.example  App.tsx  Dockerfile  app.json  package.json  tsconfig.json
banco-futura-app/src/: theme.ts
banco-futura-app/src/components/: AgentDock.tsx  AgentOrb.tsx  FadeInView.tsx  Screen.tsx
banco-futura-app/src/screens/: CardsScreen.tsx  DashboardScreen.tsx  LoginScreen.tsx  MovementsScreen.tsx  TransferScreen.tsx
banco-futura-app/src/services/: agentSession.ts  agentStore.ts  api.ts  authStore.ts  (+3 more)
intent-classifier/: Dockerfile  generate_training_data.py  pyproject.toml  train_classifier.py  tune_classifier.py
intent-classifier/models/: README.md
intent-classifier/src/intent/: classifier_service.py  intents.py  keyword_classifier.py
mcp-server/: Dockerfile  pyproject.toml  requirements.txt  test_orchestrator.py
mcp-server/knowledge_base/: limites_operacionales.md  politica_tarjetas.md  politica_transferencias.md  preguntas_frecuentes.md  procedimiento_bloqueo.md
mcp-server/src/: audit.py  config.py  db.py  main.py  server.py
mcp-server/src/auth/: middleware.py
mcp-server/src/orchestrator/: agent.py  tool_definitions.py  voice_agent.py  ws_bridge.py
mcp-server/src/rag/: embeddings.py  ingest.py  retriever.py
mcp-server/src/security/: validations.py
mcp-server/src/tools/: balance.py  cards.py  knowledge.py  transactions.py  transfer.py
mcp-server/tests/: test_tools_live.py
(+1 files in other folders)
