[project]
name = "voxbank-intent-classifier"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "joblib>=1.3.0",
    "google-genai>=0.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
